# metabase-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
docs/: CURSOR_SETUP.md  SSE_SETUP.md
scripts/: install-cursor-sse.py  install-cursor.py  install-cursor.sh  validate.py
